- General changes from early 2010, committing so source can be checked out on other machines.

--- a/src/pages/listing.html
+++ b/src/pages/listing.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-		<title id="title">Directory listing for %PATH%</title>
+		<title id="title">Directory listing for <%PATH%></title>
     </head>
     <body bgcolor='#EEEEEE'>
 		<div style="font-family:verdana;">
@@ -23,13 +23,13 @@
 						<div style="font-size:125%; font-weight:bold;">
 							<span style="text-decoration:underline">Directory listing:</span>
 							&#32;
-							<span id="path">%PATH%</span>
+							<span id="path"><%PATH%></span>
 						</div>
 					</td>
 				</tr>
 			</table>
 			<ul style="font-size:110%;" id="files">
-				%LIST%
+				<%LIST%>
 			</ul>
 			<hr>
 		</div>
